// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TablePagination render should render fifth page with 3 previous and 3 next pages when result has 10 pages 1`] = `
<div>
  <ul
    class="justify-content-center pagination pagination-sm"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="first"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="visually-hidden"
        >
          First
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="prev"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="visually-hidden"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-2"
        href="#"
        role="button"
        tabindex="0"
      >
        2
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-3"
        href="#"
        role="button"
        tabindex="0"
      >
        3
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-4"
        href="#"
        role="button"
        tabindex="0"
      >
        4
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        data-testid="item-5"
      >
        5
        <span
          class="visually-hidden"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-6"
        href="#"
        role="button"
        tabindex="0"
      >
        6
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-7"
        href="#"
        role="button"
        tabindex="0"
      >
        7
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-8"
        href="#"
        role="button"
        tabindex="0"
      >
        8
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="next"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="visually-hidden"
        >
          Next
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="last"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="visually-hidden"
        >
          Last
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`TablePagination render should render first page and 3 next pages when result has 5 pages 1`] = `
<div>
  <ul
    class="justify-content-center pagination pagination-sm"
  >
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        data-testid="first"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="visually-hidden"
        >
          First
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        data-testid="prev"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="visually-hidden"
        >
          Previous
        </span>
      </span>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        data-testid="item-1"
      >
        1
        <span
          class="visually-hidden"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-2"
        href="#"
        role="button"
        tabindex="0"
      >
        2
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-3"
        href="#"
        role="button"
        tabindex="0"
      >
        3
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-4"
        href="#"
        role="button"
        tabindex="0"
      >
        4
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="next"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="visually-hidden"
        >
          Next
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="last"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="visually-hidden"
        >
          Last
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`TablePagination render should render last page with 3 previous when result has 10 pages 1`] = `
<div>
  <ul
    class="justify-content-center pagination pagination-sm"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="first"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="visually-hidden"
        >
          First
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="prev"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="visually-hidden"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-7"
        href="#"
        role="button"
        tabindex="0"
      >
        7
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-8"
        href="#"
        role="button"
        tabindex="0"
      >
        8
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-9"
        href="#"
        role="button"
        tabindex="0"
      >
        9
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        data-testid="item-10"
      >
        10
        <span
          class="visually-hidden"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        data-testid="next"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="visually-hidden"
        >
          Next
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        data-testid="last"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="visually-hidden"
        >
          Last
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`TablePagination render should render second page with 1 previous and 2 next pages when result has 4 pages 1`] = `
<div>
  <ul
    class="justify-content-center pagination pagination-sm"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="first"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="visually-hidden"
        >
          First
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="prev"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="visually-hidden"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-1"
        href="#"
        role="button"
        tabindex="0"
      >
        1
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        data-testid="item-2"
      >
        2
        <span
          class="visually-hidden"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-3"
        href="#"
        role="button"
        tabindex="0"
      >
        3
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-4"
        href="#"
        role="button"
        tabindex="0"
      >
        4
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="next"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="visually-hidden"
        >
          Next
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="last"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="visually-hidden"
        >
          Last
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`TablePagination render should render second page with 1 previous and 3 next pages when result has 5 pages 1`] = `
<div>
  <ul
    class="justify-content-center pagination pagination-sm"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="first"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="visually-hidden"
        >
          First
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="prev"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="visually-hidden"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-1"
        href="#"
        role="button"
        tabindex="0"
      >
        1
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        data-testid="item-2"
      >
        2
        <span
          class="visually-hidden"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-3"
        href="#"
        role="button"
        tabindex="0"
      >
        3
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-4"
        href="#"
        role="button"
        tabindex="0"
      >
        4
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-5"
        href="#"
        role="button"
        tabindex="0"
      >
        5
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="next"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="visually-hidden"
        >
          Next
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="last"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="visually-hidden"
        >
          Last
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`TablePagination render should render second to last page with 3 previous and 1 next when result has 10 pages 1`] = `
<div>
  <ul
    class="justify-content-center pagination pagination-sm"
  >
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="first"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="visually-hidden"
        >
          First
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="prev"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="visually-hidden"
        >
          Previous
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-6"
        href="#"
        role="button"
        tabindex="0"
      >
        6
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-7"
        href="#"
        role="button"
        tabindex="0"
      >
        7
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-8"
        href="#"
        role="button"
        tabindex="0"
      >
        8
      </a>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        data-testid="item-9"
      >
        9
        <span
          class="visually-hidden"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="item-10"
        href="#"
        role="button"
        tabindex="0"
      >
        10
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="next"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="visually-hidden"
        >
          Next
        </span>
      </a>
    </li>
    <li
      class="page-item"
    >
      <a
        class="page-link"
        data-testid="last"
        href="#"
        role="button"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="visually-hidden"
        >
          Last
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`TablePagination render should render with 1 page 1`] = `
<div>
  <ul
    class="justify-content-center pagination pagination-sm"
  >
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        data-testid="first"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
        <span
          class="visually-hidden"
        >
          First
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        data-testid="prev"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
        <span
          class="visually-hidden"
        >
          Previous
        </span>
      </span>
    </li>
    <li
      class="page-item active"
    >
      <span
        class="page-link"
        data-testid="item-1"
      >
        1
        <span
          class="visually-hidden"
        >
          (current)
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        data-testid="next"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
        <span
          class="visually-hidden"
        >
          Next
        </span>
      </span>
    </li>
    <li
      class="page-item disabled"
    >
      <span
        class="page-link"
        data-testid="last"
        disabled=""
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
        <span
          class="visually-hidden"
        >
          Last
        </span>
      </span>
    </li>
  </ul>
</div>
`;
